<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

        <variable
                name="viewModel"
                type="com.pj109.xkorey.pjos.ui.login.LoginViewModel" />

    </data>

<LinearLayout
        style="@style/Widget.Dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/margin_large"
            android:paddingHorizontal="@dimen/margin_large"
            android:text="@string/dialog_sign_in_title"
            android:textAppearance="@style/TextAppearance.DialogTitle" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_normal"
            android:layout_marginTop="@dimen/spacing_normal"
            android:paddingHorizontal="@dimen/margin_large"
            android:text="@string/dialog_sign_in_content"
            android:textAppearance="@style/TextAppearance.DialogContent" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

        <Button
                style="@style/Widget.BorderlessButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_normal"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_normal"
                android:onClick="@{() -> viewModel.onShowLoopbar()}"
                android:text="@string/sign_in" />

        <Button
                style="@style/Widget.RaisedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_large"
                android:layout_marginStart="@dimen/spacing_normal"
                android:layout_marginTop="@dimen/margin_normal"
                android:onClick="@{() -> viewModel.onSignIn()}"
                android:text="@string/fast_sign_in" />

    </LinearLayout>

</LinearLayout>

</layout>
