<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="viewModel"
                type="com.pj109.xkorey.pjos.ui.login.AnonymousViewModel" />

    </data>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                style="@style/Widget.Dialog"
                android:id="@+id/design_bottom_sheet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorText="@{viewModel.errorText}"
            >

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nick_name"
                        android:imeActionId="6"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        android:maxLines="1"
                        android:text="@={viewModel.nickName}"
                        android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="horizontal">

                <Button
                        style="@style/Widget.AboutButtons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_normal"
                        android:layout_marginStart="@dimen/margin_large"
                        android:layout_marginTop="@dimen/margin_normal"
                        app:websiteLink="@{@string/faq_url}"
                        android:text="@string/agreement" />

                <Button
                        android:id="@+id/submit"
                        style="@style/Widget.RaisedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_normal"
                        android:layout_marginEnd="@dimen/margin_large"
                        android:layout_marginStart="@dimen/spacing_normal"
                        android:layout_marginTop="@dimen/margin_normal"
                        android:onClick="@{()->viewModel.connect()}"
                        android:text="@string/sign_in" />

            </LinearLayout>

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>