<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="viewModel"
                type="com.pj109.xkorey.pjos.ui.login.SignInViewModel" />

    </data>


<androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
                style="@style/Widget.Dialog"
                android:id="@+id/design_bottom_sheet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:errorText="@{viewModel.phoneError}">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_phone"
                        android:inputType="number"
                        android:maxLines="1"
                        android:text="@={viewModel.phone}"
                        android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="@{viewModel.inviteEnable}"
                    app:errorEnabled="true"
                    app:errorText="@{viewModel.inviteCodeError}">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/invite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/invite_code"
                        android:inputType="number"
                        android:maxLines="1"
                        android:text="@={viewModel.inviteCode}"
                        android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="@{viewModel.captchaVisibility}"
                    android:orientation="horizontal">
                <ImageView
                        android:id="@+id/captcha"
                        android:layout_width="@dimen/captcha_width"
                        android:layout_height="match_parent"
                        app:layout_constraintLeft_toLeftOf="@id/sms_code"
                        android:contentDescription=""
                        android:onClick="@{() -> viewModel.changeCaptcha()}"
                        app:imageUri="@{viewModel.captchaUrl}" />

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintLeft_toLeftOf="@id/captcha"
                        app:errorText="@{viewModel.captchaError}">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/sms_code"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/captcha"
                            android:imeActionId="6"
                            android:imeOptions="actionUnspecified"
                            android:inputType="text"
                            android:maxLines="1"
                            android:text="@={viewModel.captcha}"
                            android:singleLine="true"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="@{viewModel.smsCodeVisible}"
                    app:errorText="@{viewModel.smsCodeError}">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sms_code"
                        android:text="@={viewModel.passwod}"
                        android:imeActionId="6"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="horizontal">

                <Button
                        style="@style/Widget.AboutButtons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_normal"
                        android:layout_marginStart="@dimen/margin_large"
                        android:layout_marginTop="@dimen/margin_normal"
                        app:websiteLink="@{@string/faq_url}"
                        android:text="@string/agreement" />

                <Button
                        style="@style/Widget.RaisedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_normal"
                        android:layout_marginEnd="@dimen/margin_large"
                        android:layout_marginStart="@dimen/spacing_normal"
                        android:layout_marginTop="@dimen/margin_normal"
                        android:onClick="@{() ->viewModel.connect()}"
                        android:text="@{viewModel.buttonTxt}" />

            </LinearLayout>

        </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>